--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ ex_typesense-*.tar
 # Temporary files, for example, from tests.
 /tmp/
 
-.elixir_ls
+# Typesense local dev data folder.
+/typesense-data
 
+# Misc.
+.elixir_ls
 **.DS_Store
