--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,13 +56,15 @@ jobs:
           mix local.rebar --if-missing
           mix local.hex --if-missing
           mix deps.get
-          mix format --check-formatted
 
       - name: Compile project
         run: mix compile
 
       - name: run static analysis
         run: mix credo --all --strict
+
+      - name: format files
+        run: mix format --check-formatted
 
       - name: Run tests
         run: mix test
