--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,14 +57,23 @@ jobs:
           mix local.hex --if-missing
           mix deps.get
 
+      - name: Find unused dependencies
+        run: mix deps.unlock --check-unused
+
+      - name: Check retired dependencies
+        run: mix hex.audit
+
+      - name: Security audit of dependencies
+        run: mix deps.audit
+
       - name: Compile project
-        run: mix compile
+        run: mix compile --all-warnings
 
       - name: run static analysis
         run: mix credo --all --strict
 
       - name: format files
-        run: mix format --check-formatted
+        run: mix format --dry-run --check-formatted
 
       - name: Run tests
         run: mix test
