--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
     strategy:
       matrix:
-        typesense-version: [0.25.2 26.0]
+        typesense-version: [0.25.2, 26.0]
 
     env:
       MIX_ENV: test
