--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,10 +43,10 @@ jobs:
           docker run -d \
           -p ${{ matrix.typesense-port }} \
           --name typesense \
-          -v /tmp/typesense:/data \
+          -v /tmp/typesense-data:/data \
           typesense/typesense:${{ matrix.typesense-version}} \
           --api-key=xyz \
-          --data-dir=/data \
+          --data-dir /data \
           --enable-cors
 
       - name: Curl Typesense
