--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,10 @@
-version: "3"
 services:
   typesense:
-    image: docker.io/typesense/typesense:0.25.2
+    image: docker.io/typesense/typesense:26.0
     container_name: typesense
-    tty: true
     restart: on-failure
-    environment:
-      - TYPESENSE_DATA_DIR=/data
-      - TYPESENSE_API_KEY=xyz
+    ports:
+      - "8108:8108"
     volumes:
       - ./typesense-data:/data
-    ports:
-      # for internal status of the typesense server
-      - 8107:8107
-      # for actual typesense server
-      - 8108:8108
+    command: '--data-dir /data --api-key=xyz --enable-cors'
