--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
           docker run -d \
           -p ${{ matrix.typesense-port }} \
           --name typesense \
-          -v /tmp/typesense-data:/data \
+          -v /tmp/typesense:/data \
           typesense/typesense:${{ matrix.typesense-version}} \
           --api-key=xyz \
           --data-dir /data \
@@ -64,9 +64,9 @@ jobs:
           path: |
             deps
             _build
-          key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+          key: ${{ runner.os }}-mixtest-${{ hashFiles('**/mix.lock') }}
           restore-keys: |
-            ${{ runner.os }}-mix-
+            ${{ runner.os }}-mixtest-
 
       - name: Install Dependencies
         run: |
@@ -74,14 +74,14 @@ jobs:
           mix local.hex --if-missing
           mix deps.get
 
-      - name: Find unused dependencies
-        run: mix deps.unlock --check-unused
+      # - name: Find unused dependencies
+      #   run: mix deps.unlock --check-unused
 
-      - name: Check retired dependencies
-        run: mix hex.audit
+      # - name: Check retired dependencies
+      #   run: mix hex.audit
 
-      - name: Security audit of dependencies
-        run: mix deps.audit
+      # - name: Security audit of dependencies
+      #   run: mix deps.audit
 
       - name: Compile project
         run: mix compile --all-warnings
@@ -95,5 +95,5 @@ jobs:
       - name: Run tests
         run: mix test
 
-      - name: Post test coverage to Coveralls
-        run: mix coveralls.github
+      # - name: Post test coverage to Coveralls
+      #   run: mix coveralls.github
