--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
+version: "3"
 services:
   typesense:
-    image: docker.io/typesense/typesense:26.0
+    image: docker.io/typesense/typesense:0.25.2
     container_name: typesense
+    tty: true
     restart: on-failure
-    ports:
-      - "8108:8108"
+    environment:
+      - TYPESENSE_DATA_DIR=/data
+      - TYPESENSE_API_KEY=xyz
     volumes:
       - ./typesense-data:/data
-    command: '--data-dir /data --api-key=xyz --enable-cors'
+    ports:
+      # for internal status of the typesense server
+      - 8107:8107
+      # for actual typesense server
+      - 8108:8108
