--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,18 @@ services:
     container_name: typesense
     restart: on-failure
     ports:
-      - "8108:8108"
+      - 8107:8107 # internal status
+      - 8108:8108 # typesense server
     volumes:
       - ./typesense-data:/data
     command: '--data-dir /data --api-key=xyz --enable-cors'
+  typesense_dashboard:
+    image: ghcr.io/bfritscher/typesense-dashboard:latest
+    container_name: typesense_dashboard
+    restart: on-failure
+    ports:
+      - 8109:80
+    volumes:
+      - ./config/config.json:/srv/config.json
+    depends_on:
+      - typesense
