use matrix for ports instead of hardcoded

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Start Typesense
         run: |
           docker run -id \
-          -p 8108:8108 \
+          -p ${{ matrix.typesense-port }} \
           --name typesense \
           -v /tmp/typesense-data:/data \
           -v /tmp/typesense-analytics-data:/analytics-data \
